<resources>
    <string name="app_name">EDA397</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- Titles: prefix title_ -->
    <string name="title_travis_builds">Travis CI Builds</string>
    <string name="title_in_progress">In Progress</string>
    <string name="title_build">Build</string>
    <string name="title_github_commits">Github Commits</string>

    <!-- Actions: prefix action_ -->


    <!-- Messages: prefix message_ -->
    <string name="message_no_results">Sorry, no results!</string>


    <!-- Error Messages: prefix error_ -->
    <string name="error_unknown_error">Oops, something went wrong</string>

    <!-- Travis Build Details Label-->
    <string name="label_author_name">Author: </string>
    <string name="label_author_email">Email: </string>
    <string name="label_branch">Branch: </string>
    <string name="label_message">Message: </string>
    <string name="label_commit_link">More info: </string>
    <string name="title_planning_game">Planning Game</string>
    <string name="label_select">Select</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_welcome_subtitle">To the Pair Programming Assistant</string>
    <string name="title_home">Home</string>

    <!-- Github commit Details Label-->
    <string name="github_commit_details">Comment: </string>
    <string name="github_commit_sha">Commit: </string>
    <!-- Countdown Timer Labels-->
    <string name="title_set_time">Set Time</string>
    <string name="title_start">Start</string>
    <string name="title_timer">Timer</string>
    <string name="link_github_repository">https://github.com/DanielHosseini/EDA397_2016_Group9</string>

    <!-- Welcome Screen Labels-->
    <string name="title_poker_game">Planning Game</string>
    <string name="title_travis">Travis CI</string>
    <string name="title_github">Github</string>
    <string name="title_github_commit_details">Commit Details</string>
    <string name="title_repository">Repository</string>
    <string name="title_username">Username</string>
    <string name="msg_settings_info">Here you can configure the Github and Travis username and repositories</string>
    <string name="title_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="error_username_repository_must_be_set">Username and repository must be set</string>


</resources>
