<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/title_home"/>
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/timer"
            android:title="@string/title_timer"/>
        <item
            android:id="@+id/nav_travis"
            android:icon="@drawable/travis_icon"
            android:title="@string/title_travis_builds"/>
        <item
            android:id="@+id/nav_planning_game"
            android:icon="@drawable/playingcards"
            android:title="@string/title_planning_game"/>
        <item
            android:id="@+id/nav_github"
            android:icon="@drawable/github_icon"
            android:title="@string/title_github_commits"/>
    </group>

</menu>
